[gd_scene load_steps=9 format=2]

[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/ButtonStandard/PlayerGUI_ButtonStandard.tscn" type="PackedScene" id=1]
[ext_resource path="res://MiscRelated/DialogRelated/Controls/DialogElementControls/DialogChoicesModiPanel/DialogChoicesModiPanel.gd" type="Script" id=2]
[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://CYDE_SPECIFIC_ONLY/DialogRelated/Assets/ButtonIcons/ChangeQuestionIcon.png" type="Texture" id=4]
[ext_resource path="res://CYDE_SPECIFIC_ONLY/DialogRelated/Assets/ButtonIcons/RemoveFalseAnswersIcon.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 13
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 13
font_data = ExtResource( 3 )

[node name="DialogChoicesModiPanel" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/margin_top = 10
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_top = 10.0
margin_right = 184.0
margin_bottom = 62.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 184.0
margin_bottom = 52.0

[node name="ChangeContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 90.0
margin_bottom = 52.0
size_flags_horizontal = 2

[node name="UseLabel_Change" type="Label" parent="VBoxContainer/HBoxContainer/ChangeContainer"]
margin_right = 90.0
margin_bottom = 17.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 3 )
text = "Uses Left:"
align = 1

[node name="ChangeQuestionButton" parent="VBoxContainer/HBoxContainer/ChangeContainer" instance=ExtResource( 1 )]
margin_left = 20.0
margin_top = 21.0
margin_right = 70.0
margin_bottom = 52.0
size_flags_horizontal = 6
text_for_label = "Change Question"
custom_font = SubResource( 1 )
custom_button_icon = ExtResource( 4 )

[node name="RemoveContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 94.0
margin_right = 184.0
margin_bottom = 52.0
size_flags_horizontal = 8

[node name="UseLabel_Remove" type="Label" parent="VBoxContainer/HBoxContainer/RemoveContainer"]
margin_right = 90.0
margin_bottom = 17.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 3 )
text = "Uses Left:"
align = 1

[node name="RemoveFalseAnswer" parent="VBoxContainer/HBoxContainer/RemoveContainer" instance=ExtResource( 1 )]
margin_left = 20.0
margin_top = 21.0
margin_right = 70.0
margin_bottom = 52.0
size_flags_horizontal = 6
text_for_label = "Remove"
custom_font = SubResource( 2 )
custom_button_icon = ExtResource( 5 )

[connection signal="on_button_released_with_button_left" from="VBoxContainer/HBoxContainer/ChangeContainer/ChangeQuestionButton" to="." method="_on_ChangeQuestionButton_on_button_released_with_button_left"]
[connection signal="on_button_released_with_button_left" from="VBoxContainer/HBoxContainer/RemoveContainer/RemoveFalseAnswer" to="." method="_on_RemoveFalseAnswer_on_button_released_with_button_left"]
